# svn-mbmt

./: AUTHORS  Makefile  Makefile.am  README  configure.in  mbmt-create-test  mbmt-create-training  mbmt-create-training.c  mbmt-decode  mbmt-decode.c
etc/: mbmt.sh  mbmts.wopr  mbmtt.wopr
src/: mbmt-create-test.c  mbmt-create-training.c  mbmt-decode.c  mbmt-tar-from-A3.c
